--- a/style.css
+++ b/style.css
@@ -1,32 +1,31 @@
-body{
+body {
     background-color: salmon;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
     justify-content: center;
     height: 100rem;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
-
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
-h1{
+h1 {
     color: aliceblue;
 }
 
-p{
+p {
     color: aliceblue;
 }
 
-.section{
+.section {
     text-align: center;
 
 }
 
-.btn{
+.btn {
     font-size: 80px;
-    background-color: rgb(255,255,255,.2);
+    background-color: rgb(255, 255, 255, .2);
     border: none;
     border-radius: 10px;
     padding: 15px;
@@ -35,11 +34,11 @@ p{
     cursor: pointer;
 }
 
-.btn:hover{
+.btn:hover {
     filter: grayscale(0);
 }
 
-.emoji-name{
+.emoji-name {
     font-weight: bold;
     color: brown;
 }
